[package]
name = "actix-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
chrono = "0.4.19"
env_logger = "0.9.0"
mongodb = "1.2.2"
serde = "1.0.126"
serde_json = "1.0.64"
uuid = "0.8.2"
